--- a/mobile_store/templates/user_panel/base.html
+++ b/mobile_store/templates/user_panel/base.html
@@ -212,8 +212,8 @@
     <div style="margin-top:400px;"></div>
 
     <div class="jumbotron text-center bg-dark text-white" style="margin-bottom:0">
-    <h4>Copyright ©2021 All rights reserved | This template is made with by Ayan</h4>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui porro debitis delectus fuga officiis rerum laboriosam fugit, doloribus nesciunt, veritatis placeat quas sed modi maiores sunt repudiandae, magnam accusamus ullam.</p>
+    <h4>Copyright ©2021 All rights reserved | This template is made with by Ayan and Liza</h4>
+    <p>This is a ecom website</p>
 
   </div>
 
