--- a/mobile_store/templates/user_panel/create_account.html
+++ b/mobile_store/templates/user_panel/create_account.html
@@ -31,7 +31,7 @@
 			{% endfor %}
 		</p>
 	{% endfor %}
-	<button style="margin-top:10px" type="submit" class="btn btn-info">Create</button>
+	<button style="margin-top:10px" type="submit" class="btn btn-secondary">Create</button>
 
 
 
