--- a/mobile_store/templates/user_panel/home.html
+++ b/mobile_store/templates/user_panel/home.html
@@ -16,9 +16,9 @@
     <select class="form-control" id="exampleFormControlSelect1" name="modell">
       <option>Samsung_A21s</option>
       <option>Samsung_A30s</option>
-      <option>Nokia</option>
-      <option>4</option>
-      <option>5</option>
+      <option>I pnone 8</option>
+      <option>Asus</option>
+      <option>Vivo</option>
     </select>
   </div>
 
@@ -29,6 +29,7 @@
     <select class="form-control" id="exampleFormControlSelect1" name="rom">
       <option>64</option>
       <option>32</option>
+      <option>128</option>
   
     </select>
   </div>
@@ -39,6 +40,7 @@
     <select class="form-control" id="exampleFormControlSelect1" name="ram">
       <option>4</option>
       <option>6</option>
+      <option>2</option>
     </select>
   </div>
                 </div>
@@ -48,6 +50,7 @@
     <select class="form-control" id="exampleFormControlSelect1" name="cammera">
       <option>48</option>
       <option>25</option>
+      <option>30</option>
       {% comment %} <option>5</option> {% endcomment %}
     </select>
   </div>
@@ -61,8 +64,8 @@
 			<br>
 		</div>
 	</div>
-  <h3>Top 3 mobile</h3>
-  <div class="row mt-5">
+  <h3 class="mt-5 text-center">Top 3 mobiles</h3>
+  <div class="row mt-2">
   {% for product in products %}
 
   <div class="col-lg-4">
